--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div class="fonts">
-        <h1>Title</h1>
+        <h1>Fonts test</h1>
 
-        <p>Donec pellentesque posuere enim non fermentum. Phasellus vel commodo ipsum, ac vehicula mauris. Cras laoreet venenatis feugiat. Praesent egestas eu ligula iaculis pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique semper diam et molestie. </p>
+        <p>This is testing</p>
 
         <p>123456789</p>
         <p>2/3</p>
